--- a/Navigation-Bar/nav.less
+++ b/Navigation-Bar/nav.less
@@ -21,4 +21,14 @@
            background-color: black;
        }
    }
+
+   .menu{
+       display: none;
+       position: fixed;
+       z-index: 1000;
+       width: 40rem;
+       height: 50rem;
+       background-color: white;
+       border-radius: 1rem;
+   }
 }
