Positioning for carousel

--- a/less/index.less
+++ b/less/index.less
@@ -1,5 +1,6 @@
 @import "reset.less";
 @import "../Navigation-Bar/nav.less";
+@import "../Card-Carousel/carousel.less";
 
 body{
     background-repeat: no-repeat;
