--- a/css/index.css
+++ b/css/index.css
@@ -128,7 +128,12 @@ table {
 }
 :root {
   font-size: 62.5%;
+}
+* {
   box-sizing: border-box;
+}
+* {
+  box-sizing: inherit;
 }
 #top-bar {
   width: 100%;
@@ -161,6 +166,40 @@ table {
   height: 50rem;
   background-color: white;
   border-radius: 1rem;
+}
+.carousel-cards {
+  position: absolute;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  width: 100%;
+  height: 60vh;
+  bottom: 10vh;
+  box-sizing: border-box;
+}
+.carousel-cards .carousel-wheel {
+  height: 100%;
+  width: 80%;
+  display: flex;
+  justify-content: space-between;
+}
+.carousel-cards .carousel-wheel .unit-card {
+  height: 100%;
+  width: 22.5%;
+  background-color: white;
+  display: flex;
+  flex-direction: column;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+.carousel-cards .carousel-wheel .unit-card img {
+  height: 50%;
+  width: auto;
+}
+.carousel-cards .carousel-wheel .unit-card .description {
+  height: 50%;
+  width: auto;
+  padding: 4rem;
+  box-shadow: 0px -2px 4px rgba(0, 0, 0, 0.25);
 }
 body {
   background-repeat: no-repeat;
